bugfix - rte controls are visible in preview mode

--- a/src/components/gadgets/notes-listview/NoteView.css
+++ b/src/components/gadgets/notes-listview/NoteView.css
@@ -23,7 +23,7 @@
     background-color: #4e4e4e;
 }
 
-.Note-view.Note-view-preview-mode .Note-view-controls-left,  .Note-view.Note-view-preview-mode .Note-view-controls-right{
+.Note-view.Note-view-preview-mode .Note-view-controls{
     display: none;
 }
 
